Correcion calculo de precios